--- a/index.ipynb
+++ b/index.ipynb
@@ -12,9 +12,9 @@
     " - [MPICH](https://www.mpich.org)\n",
     " - [jupyter-CAF-kernel](https://github.com/sourceryinstitute/jupyter-CAF-kernel)\n",
     " \n",
-    " ## Software versions:\n",
+    "## Software versions:\n",
     " \n",
-    " Please see the output below for the current version of each component of the software stack"
+    "Please see the output below for the current version of each component of the software stack"
    ]
   },
   {
@@ -78,9 +78,9 @@
     "\n",
     "### Controlling parallel execution\n",
     "\n",
-    "By default any Fortran code will be launch with the `cafrun` wrapper script, which will hanle calls to the Coarray implementation's backend, in this case [MPICH](https://www.mpich.org/)'s `mpirun`. Since this notebook executes in the cloud on one puny docker container, the __default number of images, `num_images`, has been set to 4__. *Use of more than 10 images __could CRASH__ your jupyter notebook if run from docker.*\n",
+    "By default any Fortran code will be launch with the `cafrun` wrapper script, which will hanle calls to the Coarray implementation's backend, in this case [MPICH](https://www.mpich.org/)'s `mpirun`. Since this notebook executes in the cloud on one puny docker container, the __default number of images, `num_images`, has been set to 4__. *Use of more than 10 images __could CRASH__ your jupyter notebook if run in the cloud using [Binder].*\n",
     "\n",
-    "__To control the number of images__ we have implemented a jupyter notebook \"magic\" for the form:\n",
+    "To __control the number of images__ we have implemented a jupyter notebook \"magic\" for the form:\n",
     "\n",
     "__`%num_images: <n>`__  \n",
     "where `<n>` should be replaced by a suitable (read small) positive integer.\n",
@@ -100,7 +100,9 @@
     "\n",
     "## A brief example\n",
     "\n",
-    "An example program demonstrating most of these \"magics\" is shown below:"
+    "An example program demonstrating most of these \"magics\" is shown below:\n",
+    "\n",
+    "[Binder]: https://beta.mybinder.org"
    ]
   },
   {
@@ -153,10 +155,6 @@
     "        if (me <= num_arg) then\n",
     "            call get_command_argument (me, value=arg(me), status=istat)\n",
     "            select case(istat)\n",
-    "            case(-1)\n",
-    "                write(*,'(A,I0,A)') \"Argument number \", me, \" was too long.\"\n",
-    "            case(1:)\n",
-    "                write(*,'(A,I0,A)') \"Argument number \", me, \" could not be retrieved.\"\n",
     "            case(0)\n",
     "                write(*,'(A,I0,A)') \"Argument number \", me, \" was: \"//trim(arg(me))\n",
     "            case default\n",
