Upgrade index.ipynb

--- a/index.ipynb
+++ b/index.ipynb
@@ -4,7 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Coarray Fortran Kernel\n",
+    "<a name=\"top\"> </a>\n",
+    "<div align=\"center\">\n",
+    "\n",
+    "<a href=\"http://www.sourceryinstitute.org\"><img src=\"http://www.sourceryinstitute.org/uploads/4/9/9/6/49967347/sourcery-logo-rgb-hi-rez-1.png\"/></a>\n",
+    "<h1> Coarray Fortran Kernel </h1>\n",
+    "\n",
+    "</div>\n",
+    "\n",
+    "## Software stack\n",
     "\n",
     "This jupyter notebook Fortran kernel uses the following software stack:\n",
     " - [GFortran](https://gcc.gnu.org/wiki/GFortran)\n",
@@ -12,9 +20,13 @@
     " - [MPICH](https://www.mpich.org)\n",
     " - [jupyter-CAF-kernel](https://github.com/sourceryinstitute/jupyter-CAF-kernel)\n",
     " \n",
-    "## Software versions:\n",
-    " \n",
-    "Please see the output below for the current version of each component of the software stack"
+    "Please see the [output below](#versions-cell) for the current version of each component of the software stack\n",
+    "\n",
+    "## [Open Parent Folder](./)\n",
+    "\n",
+    "A new notebook or folder may be easily created by returning to the [parent folder](./).\n",
+    "\n",
+    "<a id=\"versions-cell\"></a>"
    ]
   },
   {
@@ -74,7 +86,8 @@
    "source": [
     "## Getting started\n",
     "\n",
-    "Each Coarray Fortran cell must be the contents a compilable Fortran source code file producing a program. The exception to this are the \"magics\" discussed below, which are lines starting with the percent character, `%`, that controll the compilation and execution of the program. Additional program units, e.g., modules, may be specified ahead of the main program. Only one program per cell is allowed.\n",
+    "Each Coarray Fortran cell must be the contents a compilable Fortran source code file producing a program. The exception to this are the \"magics\" discussed below, which are lines starting with the percent character, `%`, that controll the compilation and execution of the program. Additional program units, e.g., modules, may be specified ahead of the main program. Only one program per cell is allowed.  \n",
+    "[top](#top)\n",
     "\n",
     "### Controlling parallel execution\n",
     "\n",
@@ -83,7 +96,8 @@
     "To __control the number of images__ we have implemented a jupyter notebook \"magic\" for the form:\n",
     "\n",
     "__`%num_images: <n>`__  \n",
-    "where `<n>` should be replaced by a suitable (read small) positive integer.\n",
+    "where `<n>` should be replaced by a suitable (read small) positive integer.  \n",
+    "[top](#top)\n",
     "\n",
     "### Controlling compilation\n",
     "\n",
@@ -92,15 +106,19 @@
     " - __`%fcflags: <flag1>[ <flag2> [ ... [<flagN>]]]`__  \n",
     "   Use this magic to pass flags to the fortran compiler, [GFortran](https://gcc.gnu.org/wiki/GFortran), via the `caf` compiler wrapper script. The `caf` script ensures propper compilation linking against [OpenCoarrays](https://github.com/sourceryinstitute/OpenCoarrays).\n",
     " - __`%ldflags: <linkerflag1>[ <linkerflag2> [ ... [<linkerflagN>]]]`__  \n",
-    "   Specify flags to pass to the linker. This should rarely be necessary.\n",
+    "   Specify flags to pass to the linker. This should rarely be necessary.  \n",
+    "\n",
+    "[top](#top)\n",
     "\n",
     "### Controlling arguments passed to compiled programs\n",
     "\n",
-    "The __`%args: <arg1>[ <arg2> [ ... [<argN>]]]`__ \"magic\" may be used to pass command line arguments to your program.\n",
+    "The __`%args: <arg1>[ <arg2> [ ... [<argN>]]]`__ \"magic\" may be used to pass command line arguments to your program.  \n",
+    "[top](#top)\n",
     "\n",
     "## A brief example\n",
     "\n",
-    "An example program demonstrating most of these \"magics\" is shown below:\n",
+    "An example program demonstrating most of these \"magics\" is shown below:  \n",
+    "[top](#top)\n",
     "\n",
     "[Binder]: https://beta.mybinder.org"
    ]
@@ -114,12 +132,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello from image 5 of 5!\n",
-      "Hello from image 1 of 5!\n",
-      "Hello from image 4 of 5!\n",
-      "Argument number 1 was: IamOne\n",
       "Hello from image 3 of 5!\n",
+      "Hello from image 4 of 5!\n",
+      "Hello from image 5 of 5!\n",
       "Argument number 3 was: IamThree\n",
+      "Hello from image 1 of 5!\n",
+      "Argument number 1 was: IamOne\n",
       "Hello from image 2 of 5!\n",
       "Argument number 2 was: IamTwo\n"
      ]
