Fix counting in example NB

--- a/index.ipynb
+++ b/index.ipynb
@@ -144,7 +144,7 @@
       "Hello from image 2 of 5!\n",
       "Argument number 2 was: IamTwo\n",
       "Hello from image 4 of 5!\n",
-      "Argument number 4 was: I am Five\n"
+      "Argument number 4 was: I am Four\n"
      ]
     }
    ],
@@ -156,7 +156,7 @@
     "%num_images: 5\n",
     "\n",
     "! Pass command line arguments to our program:\n",
-    "%args: IamOne IamTwo IamThree \"I am Five\"\n",
+    "%args: IamOne IamTwo IamThree \"I am Four\"\n",
     "\n",
     "! Use the following extra compilation flags:\n",
     "%fcflags: -fbacktrace -std=f2008 -W -Wall -Wextra -pedantic\n",
